WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255492
Scroll snap sometimes jumps back to the wrong place on stevejobsarchive.com
https://bugs.webkit.org/show_bug.cgi?id=255492
Summary
Scroll snap sometimes jumps back to the wrong place on stevejobsarchive.com
Simon Fraser (smfr)
Reported
2023-04-15 16:05:41 PDT
When scrolling
https://book.stevejobsarchive.com
with a trackpad, sometimes it scrolls back to the wrong location.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-04-15 16:06:01 PDT
<
rdar://107885376
>
Simon Fraser (smfr)
Comment 2
2023-04-15 16:13:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12775
EWS
Comment 3
2023-04-18 14:35:43 PDT
Committed
263097@main
(ee03689988d7): <
https://commits.webkit.org/263097@main
> Reviewed commits have been landed. Closing PR #12775 and removing active labels.
Brent Fulgham
Comment 4
2023-05-03 11:49:22 PDT
This fix is available in macOS Ventura 13.4 beta 4 (22F5059b ) and iOS 16.5 beta 4 (20F5059a).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug